2009-11-03  higepon  <higepon@users.sourceforge.jp>

	* Added --enable-auto-import flag.

	* core/kernel/Thread.h (class Thread): Fixed a bug of clearEventWaiting().

2009-10-31  higepon  <higepon@users.sourceforge.jp>

	* test/monapi/mutex/mutex.cpp : Added tests for Mutex::lock with timeout.

	* include/monapi/Mutex.h (MonAPI): Added lock with timeout.

2009-10-07  higepon  <higepon@users.sourceforge.jp>

	* RELNOTE: Added.

2009-09-15  higepon  <higepon@users.sourceforge.jp>

	* core/monapi/monapi_impl.cpp (enterGuard): Now malloc/free family become thread safe.

	* core/monapi/_alloca.asm: export directive should be placed after the section text
                                   Otherwise nasm 2.07 will SEGV.

2009-08-11  higepon  <higepon@users.sourceforge.jp>

	* tool/qemu/start.bat: Added.

2009-05-17  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/PageManager.cpp (PageManager::allocateContiguous): Added for virtio.

2008-01-19  higepon  <higepon@users.sourceforge.jp>

        * core/monapi/System.cpp : Fixed bug of return value.

2008-01-10  higepon  <higepon@users.sourceforge.jp>

        * test/monalibc/stdio/ : Moved from core/test.

        * core/scheme/lib/conf.scm.in: Added auto starting test codes.

2008-01-09  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/lib/conf.scm.in: libc string all passsed.

        * core/monalibc/string/strncat.c (strncat): Fixed the bug.

        * core/monalibc/string/strchr.c (strchr): Fixed the bug.

        * core/monapi/string.cpp (strncpy): Fixed when n < strlen(src).

2008-01-08  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/string/strncpy.c (strncpy): Fixed when n < strlen(src).

        * core/monalibc/string/strncat.c (strncat): Fixed the bug of size n == 0.

2007-12-28  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/stdio/fread.c (__nida_fullybuf_fread): Fixed buffer over flow. Thx id:h0shu.

        * configure : Added wine for Mingw.
